# eloqstore

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  archive_crond.cpp  async_io_manager.cpp  async_io_manager.h  background_write.cpp  background_write.h  batch_write_task.cpp  batch_write_task.h  cache_q_test.cpp  cache_q_test_req.cpp  coding.cpp  coding.h  common.h  compact_task.cpp  comparator.cpp  compression.cpp  data_page.cpp  data_page.h  data_page_builder.cpp  data_page_builder.h  eloq_queue.h  eloq_store.cpp  eloq_store.h  eloqstore_module.cpp  eloqstore_module.h  error.h  file_gc.cpp  file_gc.h  gc_cleanup_task.h  index_page_manager.cpp  index_page_manager.h  kill_point.cpp  (+39 more)
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: CMakeLists.txt  eloq_queue.h  eloq_store_bm.cc  eloq_store_bm.h  file_access.cpp  file_reader.h  helpers.cc  helpers.h  io_read_task.h  io_test.cpp  io_uring.h  io_uring_test.cpp  load_bench.cpp  obj_gen.cc  opts_append.ini  opts_local.ini  page_id.h  proxy.h  queue_sync_test.cpp  rocksdb_bm.cc  rocksdb_bm.h  shard_queue.h  shared_queue.h  simple_bench.cpp  simple_test.cpp  test_iouring.cpp  uring_register_test.cpp
cloudtest/: upload_async.cpp
db_stress/: .gitignore  CMakeLists.txt  README.md  batched_ops_stress.cpp  batched_ops_stress.h  clean_up.cpp  concurrent_test.cpp  convert_disk_usage.py  crash_test.py  db_stress_common.cpp  db_stress_common.h  db_stress_driver.cpp  db_stress_gflags.cpp  db_stress_shared_state.cpp  db_stress_shared_state.h  db_stress_test_base.cpp  db_stress_test_base.h  eloqstore.code-workspace  expected_value.cpp  expected_value.h  non_batched_ops_stress.cpp  non_batched_ops_stress.h  random.h  test.sh  test_back.sh  test_client.cpp
debug/: test_deleted_file.cpp
dev/: CLAUDE.md  CMakeLists.txt  FAILED_TESTS.md  TEST_FINAL_SUMMARY.md  TEST_IMPLEMENTATION_STATUS.md  TEST_PLAN.md  TEST_STATUS.md  TEST_SUMMARY.md  run_all_tests.sh  run_tests.sh  run_working_tests.sh  test_config.ini  test_execution_report.md
dev/.github/workflows/: test.yml
dev/edge_cases/: boundary_values_test.cpp
dev/fixtures/: data_generator.cpp  data_generator.h  random_generator.cpp  random_generator.h  temp_directory.cpp  temp_directory.h  test_config.cpp  test_config.h  test_fixtures.cpp  test_fixtures.h  test_helpers.cpp  test_helpers.h
dev/integration/: basic_operations_test.cpp  workflow_test.cpp
dev/mocks/: mock_io_manager.cpp  mock_io_manager.h  mock_shard.cpp  mock_shard.h  mock_task_manager.cpp  mock_task_manager.h
dev/stress/: concurrent_operations_test.cpp
dev/tests/core/: async_simple_test.cpp  boundary_values_test.cpp  coding_simple_test.cpp  coding_test.cpp  comparator_test.cpp  data_page_builder_test.cpp  data_page_test.cpp  index_page_test.cpp  overflow_page_test.cpp  page_mapper_test.cpp  page_test.cpp  simple_test.cpp  types_test.cpp
dev/tests/integration/: async_ops_test.cpp  async_pattern_test.cpp  basic_operations_test.cpp  workflow_test.cpp
dev/tests/integrity/: data_integrity_test.cpp
dev/tests/io/: async_io_manager_test.cpp  async_io_manager_test_complex.cpp.bak
dev/tests/persistence/: recovery_test.cpp
dev/tests/shard/: shard_test.cpp
dev/tests/storage/: archive_mode_test.cpp  cloud_storage_test.cpp  file_gc_test.cpp  manifest_test.cpp
dev/tests/stress/: concurrent_test.cpp  randomized_stress_test.cpp
dev/tests/task/: background_write_test.cpp  batch_write_task_test.cpp  read_task_test.cpp  scan_task_test.cpp  task_base_test.cpp
dev/tests/utils/: error_test.cpp  kv_options_test.cpp  utils_test.cpp
examples/: CMakeLists.txt  basic_example.cpp
fuzz/: README.md  afl_store_fuzz.cpp
include/: async_io_manager.h  circular_queue.h  cloud_storage_service.h  common.h  comparator.h  compression.h  direct_io_buffer.h  eloq_store.h  eloqstore_metrics.h  file_gc.h  kill_point.h  kv_options.h  manifest_buffer.h  pool.h  replayer.h  test_utils.h  types.h
micro-bench/: io_read_task.h
rust/: Cargo.toml  README.md
rustdev/: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  run_tests.sh  simple_test.rs  simple_test.sh  test_simple.rs
rustdev/examples/: README.md  benchmark.rs  complete_stress.rs  debug_test.rs  native_usage.rs  stress_test_small.rs  test_basic_ops.rs
rustdev/src/: error.rs  lib.rs  main.rs  types.rs
rustdev/src/api/: error.rs  mod.rs  request.rs  response.rs
rustdev/src/codec/: encoding.rs  mod.rs
rustdev/src/config/: kv_options.rs  mod.rs
rustdev/src/ffi/: mod.rs
rustdev/src/index/: index_page.rs  index_page_builder.rs  index_page_iter.rs  index_page_manager.rs  index_page_old.rs  mod.rs  root_meta.rs
rustdev/src/io/: async_file.rs  buffer_ring.rs  completion.rs  mod.rs  uring_manager.rs
rustdev/src/io/backend/: factory.rs  mod.rs  sync_backend.rs  tests.rs  thread_pool_backend.rs  tokio_backend.rs  uring_backend.rs
rustdev/src/page/: data_page.rs  data_page_builder.rs  mod.rs  overflow_page.rs  page.rs  page_builder.rs  page_cache.rs  page_mapper.rs  page_pool.rs
rustdev/src/shard/: coordinator.rs  manager.rs  mod.rs  queue.rs  router.rs  shard.rs  stats.rs  worker.rs
rustdev/src/storage/: async_file_manager.rs  file_manager.rs  manifest.rs  mod.rs  traits.rs
rustdev/src/store/: eloq_store.rs  mod.rs  request.rs
rustdev/src/task/: background.rs  mod.rs  read.rs  scan.rs  scheduler.rs  traits.rs  write.rs  write.rs.backup  write_simple.rs
rustdev/src/types/: mod.rs
rustdev/src/utils/: comparator.rs  mod.rs
rustdev/tests/: all_tests.rs  basic_test.rs
rustdev/tests/common/: mod.rs
rustdev/tests/integration/: manifest_test.rs  mod.rs  page_test.rs  storage_test.rs
rustdev/tests/stress/: concurrent_stress.rs  durability_test.rs  mod.rs  random_workload.rs
rustdev/tests/unit/: codec_tests.rs  index_tests.rs  mod.rs  page_tests.rs  shard_tests.rs  storage_tests.rs  task_tests.rs
scripts/: format.sh  install_dependency_ubuntu2404.sh
src/: async_io_manager.cpp  cloud_storage_service.cpp  compression.cpp  eloq_store.cpp  file_gc.cpp  kv_options.cpp  (+2 more)
(+119 files in other folders)
