[package]
name = "eloqstore-rs"
version = "0.1.0"
edition = "2021"
authors = ["EloqStore Contributors"]
description = "High-performance key-value storage engine built for EloqKV"
repository = "https://github.com/eloqstore/eloqstore-rs"
license = "MIT OR Apache-2.0"
keywords = ["database", "key-value", "storage", "io-uring", "async"]
categories = ["database", "asynchronous", "filesystem"]

[features]
default = ["compression", "cloud"]
compression = ["lz4", "zstd"]
cloud = ["object_store"]
ffi = ["bindgen"]

[[bin]]
name = "eloqstore"
path = "src/main.rs"
required-features = []

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-uring = "0.5"
tokio-util = "0.7"

# Data structures
bytes = "1.7"
smallvec = "1.13"
dashmap = "6.1"
crossbeam = "0.8"
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"

# Compression (optional)
lz4 = { version = "1.28", optional = true }
zstd = { version = "0.13", optional = true }

# Cloud storage (optional)
object_store = { version = "0.11", optional = true, features = ["aws", "azure", "gcp"] }

# Utilities
crc32c = "0.6"
uuid = { version = "1.10", features = ["v4"] }
pin-project = "1.1"
futures = "0.3"
async-trait = "0.1"
chrono = "0.4"

# Memory management
jemallocator = "0.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tempfile = "3.12"
rand = "0.8"
pretty_assertions = "1.4"
test-case = "3.3"
tokio-test = "0.4"

[build-dependencies]
bindgen = { version = "0.70", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = 'abort'

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
debug = true
